add ssh port information in vnode structure
